# decision-agent/agent-backend/agent-factory/cmd/openapi-docs/generated/swagger/swagger.json
@@ -3863,6 +3863,19 @@
                 "RespErrorTypeAgentExecutor"
             ]
         },
+        "cdaenum.AgentMode": {
+            "type": "string",
+            "enum": [
+                "default",
+                "dolphin",
+                "react"
+            ],
+            "x-enum-varnames": [
+                "AgentModeDefault",
+                "AgentModeDolphin",
+                "AgentModeReact"
+            ]
+        },
         "cdaenum.AvatarType": {
             "type": "integer",
             "enum": [
@@ -4586,19 +4599,6 @@
                 }
             }
         },
-        "daconfvalobj.NonDolphinModeConfig": {
-            "type": "object",
-            "properties": {
-                "disable_history_in_a_conversation": {
-                    "description": "是否禁用单次会话的历史记录",
-                    "type": "boolean"
-                },
-                "disable_llm_cache": {
-                    "description": "是否禁用LLM缓存",
-                    "type": "boolean"
-                }
-            }
-        },
         "daconfvalobj.OpeningRemarkConfig": {
             "type": "object",
             "properties": {
@@ -4652,6 +4652,19 @@
                 "question": {
                     "description": "问题内容",
                     "type": "string"
+                }
+            }
+        },
+        "daconfvalobj.ReactConfig": {
+            "type": "object",
+            "properties": {
+                "disable_history_in_a_conversation": {
+                    "description": "是否禁用单次会话的历史记录",
+                    "type": "boolean"
+                },
+                "disable_llm_cache": {
+                    "description": "是否禁用LLM缓存",
+                    "type": "boolean"
                 }
             }
         },
@@ -5587,6 +5600,10 @@
                         }
                     ]
                 },
+                "is_use_tool_id_in_dolphin": {
+                    "description": "dolphin 中是否使用 tool id",
+                    "type": "integer"
+                },
                 "llms": {
                     "description": "LLM 配置",
                     "type": "array",
@@ -5610,11 +5627,11 @@
                         }
                     ]
                 },
-                "non_dolphin_mode_config": {
-                    "description": "非Dolphin模式配置",
+                "mode": {
+                    "description": "配置模式",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/daconfvalobj.NonDolphinModeConfig"
+                            "$ref": "#/definitions/cdaenum.AgentMode"
                         }
                     ]
                 },
@@ -5662,6 +5679,14 @@
                     "items": {
                         "$ref": "#/definitions/daconfvalobj.PresetQuestion"
                     }
+                },
+                "react_config": {
+                    "description": "ReAct 模式配置",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/daconfvalobj.ReactConfig"
+                        }
+                    ]
                 },
                 "related_question": {
                     "description": "相关问题配置",
