# decision-agent/agent-backend/agent-factory/src/driveradapter/api/rdto/swagger/agent_config_models.go
@@ -60,7 +60,9 @@ type AgentConfigConfig struct {
 	Input                     *daconfvalobj.Input                     `json:"input"`                       // 输入参数
 	SystemPrompt              string                                  `json:"system_prompt"`               // 系统提示词
 	Dolphin                   string                                  `json:"dolphin"`                     // Dolphin 语句
+	Mode                      cdaenum.AgentMode                       `json:"mode"`                        // 配置模式
 	IsDolphinMode             cdaenum.DolphinMode                     `json:"is_dolphin_mode"`             // 是否是 dolphin 模式
+	IsUseToolIDInDolphin      int                                     `json:"is_use_tool_id_in_dolphin"`   // dolphin 中是否使用 tool id
 	PreDolphin                []*daconfvalobj.DolphinTpl              `json:"pre_dolphin"`                 // 在用户自定义 dolphin 之前执行的内置 dolphin 语句
 	PostDolphin               []*daconfvalobj.DolphinTpl              `json:"post_dolphin"`                // 在用户自定义 dolphin 之后执行的内置 dolphin 语句
 	DataSource                *datasourcevalobj.RetrieverDataSource   `json:"data_source"`                 // 数据源
@@ -74,7 +76,7 @@ type AgentConfigConfig struct {
 	Memory                    *daconfvalobj.MemoryCfg                 `json:"memory"`                      // 长期记忆配置
 	RelatedQuestion           *daconfvalobj.RelatedQuestion           `json:"related_question"`            // 相关问题配置
 	PlanMode                  *daconfvalobj.PlanMode                  `json:"plan_mode"`                   // 任务规划模式配置
-	NonDolphinModeConfig      *daconfvalobj.NonDolphinModeConfig      `json:"non_dolphin_mode_config"`     // 非Dolphin模式配置
+	ReactConfig               *daconfvalobj.ReactConfig               `json:"react_config"`                // ReAct 模式配置
 	ConversationHistoryConfig *daconfvalobj.ConversationHistoryConfig `json:"conversation_history_config"` // 会话历史配置
 	Metadata                  daconfvalobj.ConfigMetadata             `json:"metadata"`                    // 配置元数据
 }
